--- a/src/components/project/Style.css
+++ b/src/components/project/Style.css
@@ -1,22 +1,28 @@
 .project {
-	max-width: 400px;
-	height: 350px;
-	background-color: var(--project-card-bg);
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
+  max-width: 400px;
+  height: 350px;
+  background-color: var(--project-card-bg);
+  box-shadow: var(--box-shadow);
+  border-radius: 10px;
+  margin-bottom: 100px;
 }
 
 .project__img {
-	border-radius: 10px;
-	width: 550px;
-	height:250px;
-	
+  border-radius: 10px;
+  width: 550px;
+  height: 250px;
 }
 
 .project__title {
-	padding: 15px 20px 25px;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-	color: var(--project-card-text);
+  padding: 15px 20px 25px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.3;
+  color: var(--project-card-text);
+  margin-bottom: 50px;
+}
+.btn-card {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
