--- a/src/components/project/Style.css
+++ b/src/components/project/Style.css
@@ -1,10 +1,10 @@
 .project {
   max-width: 400px;
-  height: 350px;
+  height: 360px;
   background-color: var(--project-card-bg);
   box-shadow: var(--box-shadow);
   border-radius: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 160px;
 }
 
 .project__img {
@@ -19,10 +19,15 @@
   font-size: 24px;
   line-height: 1.3;
   color: var(--project-card-text);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
+
 .btn-card {
   display: flex;
   justify-content: center;
   margin-top: 10px;
+  
 }
+.project__skills {
+	font-size: 14px; 
+  }
